<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_infoTyp" />

    <EditText
        android:id="@+id/typInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_infoTyp_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_infoText" />

    <EditText
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_infoText_hint"
        android:inputType="textPersonName" />
</LinearLayout>