<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.SingleViews.InfoAndRelation">


    <LinearLayout
        android:id="@+id/infoBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_and_relation__info" />

        <com.prinzdarknis.thebibliotheca.ui.StackView
            android:id="@+id/infoList"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.prinzdarknis.thebibliotheca.ui.StackView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/parentBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBox">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_and_relation_parents" />

        <com.prinzdarknis.thebibliotheca.ui.StackView
            android:id="@+id/parentList"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.prinzdarknis.thebibliotheca.ui.StackView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/childBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentBox">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_and_relation_children" />

        <com.prinzdarknis.thebibliotheca.ui.StackView
            android:id="@+id/childList"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.prinzdarknis.thebibliotheca.ui.StackView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinnoffBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childBox">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_and_relation_spinnoff" />

        <com.prinzdarknis.thebibliotheca.ui.StackView
            android:id="@+id/spinnoffList"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.prinzdarknis.thebibliotheca.ui.StackView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>